Completed CSS AND HTML of first page of practice website

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
 
     <section id="showcase">
-      <div>
+      <div class="container">
     <!--To allow the content to be in the middle-->
     <h1>Professional Web Design</h1>
     <p>At ACME, we build professional websites without charging a premium price tag</p>
@@ -60,11 +60,11 @@
           <h3>CSS3 Styling</h3>
           <p>We style to ensure the effectiveness of the website</p>
         </div>
-      </div>
-      <div class="box">
+        <div class="box">
         <img src="./img/logo_brush.png">
         <h3>Graphic Design</h3>
         <p>We guarantee beautifully designed websites</p>
+        </div>
       </div>
     </section>
 
