Completed website, need to put finishing touches

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="web design, affordable web design, professional web design">
     <meta name="author" content="Brad Traversy">
     <title>Acme Web Design | About</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <header>
@@ -55,7 +55,7 @@
           <div class="dark">
             <h3>What We Do</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis et turpis nisi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer nec dui purus. Curabitur luctus felis in lorem fringilla, id consectetur arcu euismod. Morbi semper eget augue at eleifend. Nam sed sodales turpis. Nulla facilisi. Morbi vel suscipit sem. Proin ac tristique elit, sit amet mollis metus. Nullam scelerisque urna finibus orci porta, ac fringilla mauris gravida.
-            </p> 
+            </p>
           </div>
         </aside>
 
