--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="web design, affordable web design, professional web design">
     <meta name="author" content="Brad Traversy">
     <title>Acme Web Design | Welcome</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <header>
