--- a/services.html
+++ b/services.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="web design, affordable web design, professional web design">
     <meta name="author" content="Brad Traversy">
     <title>Acme Web Design | Services</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
     <header>
@@ -77,7 +77,7 @@
               </div>
               <div>
                 <label>Messages</label><br>
-                <textarea name="Message"></textarea>
+                <textarea placeholder="Message"></textarea>
               </div>
               <button class="button_1" type="submit">Send</button>
             </form>
